fix(responsive): correct layout issues on desktop and tablet screens

--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -275,8 +275,8 @@ main {
 }
 
 .intro-loader {
-  width: 24px;
-  height: 24px;
+  width: 22px;
+  height: 22px;
   border: 3px solid #fff;
   border-bottom-color: transparent;
   border-radius: 50%;
